# pyfatsecret

./: .gitignore  LICENSE  README.md  README.rst  example.py  fatsecret.py  release.sh  requirements.txt  setup.cfg  setup.py
Examples/: __init__.py  cli_example.py  web_example.py
docs/: Makefile  api_docs.rst  conf.py  contents.rst.inc  index.rst  make.bat  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  setup.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.html  usage.html
docs/_build/html/_sources/: index.txt  setup.txt
examples/: cli_example.py  web_example.py
fatsecret/: __init__.py  fatsecret.py
src/fatsecret/: fatsecret.py
