[metadata]
name = fatsecret
version = 0.4.0
author = Alex Nelson
author_email = w.alexnelson@gmail.com
description = Python wrapper for FatSecret REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walexnelson/pyfatsecret
project_urls =
    Bug Tracker = https://github.com/walexnelson/pyfatsecret/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
